<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlt_main"
    android:layout_width="fill_parent"
    android:layout_height="90dp"
    android:background="#000000"
    android:padding="6dp" >

    <TextView
        android:id="@+id/tv_cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#CCC333"
        android:text="@string/cod"
        android:textColor="#FF0033"
        android:paddingLeft="2dp"
        android:width="60dp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_cod"
        android:layout_alignBottom="@+id/tv_cod"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tv_cod"
        android:background="#FFFFFF"
        android:text="@string/description"
        android:paddingLeft="2dp"
        android:textColor="#FF0033" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_cod"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_cod"
        android:background="#CCC"
        android:text="@string/address"
        android:paddingLeft="2dp"
        android:textColor="#000000" />

</RelativeLayout>