<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayoutHead"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="#0A0C29" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFoot"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:background="#0A0C29" >

        <TextView
            android:id="@+id/textViewOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="14dp"
            android:text="" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutHead"
        android:layout_above="@+id/linearLayoutFoot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:background="#CFDCE9" >

        <LinearLayout
            android:id="@+id/linearLayoutLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F1F5F9" >

            <ImageView
                android:id="@+id/imageViewLog"
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/logo_small"
                android:layout_gravity="center_vertical|center_horizontal" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:textColor="#0A0C29"
                android:text="@string/rusuario"
                android:textStyle="bold" />
            <View
                android:id="@+id/textViewSep"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="#0A0C29" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:background="#DDDDDD" >
            
            <View
                android:id="@+id/textViewSepusr"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="#3F8A00" />
            
            <TextView
                android:id="@+id/textViewUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_marginLeft="15dp"
                android:textColor="#838383"
                android:text="@string/usuario"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />
            
        </LinearLayout>
        
		<EditText
			android:id="@+id/editText1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"
        	android:layout_marginLeft="15dp"
        	android:layout_marginRight="15dp"
        	android:width="280dp"
        	android:inputType="textPersonName" >
        <requestFocus />
		</EditText>
		
		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:background="#DDDDDD" >
            
            <View
                android:id="@+id/textViewSeppss"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="#3F8A00" />
            
            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_marginLeft="15dp"
                android:textColor="#838383"
                android:text="@string/pass"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />
            
        </LinearLayout>


    	<EditText
			android:id="@+id/editText2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"
        	android:layout_marginLeft="15dp"
        	android:layout_marginRight="15dp"
        	android:width="280dp"
			android:inputType="textPassword" />
    	
    	<LinearLayout 
    	    android:id="@+id/LinearLayoutButton"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:gravity="center">
    	    
    	    <ImageView
    	    android:id="@+id/imageViewBtnEntrar"
    	    android:contentDescription="@string/app_name"
    	    android:layout_width="70dp"
    	    android:layout_height="70dp"
    	    android:src="@drawable/btn_entrar"
            android:layout_gravity="center_vertical" />
    	    
    	    <LinearLayout 
    	    	android:id="@+id/LinearLayoutCheckbox"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_marginLeft="15dp"
    	    	android:orientation="horizontal"
    	    	android:gravity="center">

    	        <CheckBox
    	            android:id="@+id/checkBoxRecordar"
    	            android:layout_width="wrap_content"
    	            android:layout_height="wrap_content"
    	            android:text="@string/recordar"
    	            android:textColor="#0A0C29" />
    	        
    	    </LinearLayout>
    	    
    	</LinearLayout>



	    <LinearLayout
	        android:id="@+id/LinearLayoutMensaje"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center" >
	        
	    </LinearLayout>

    </LinearLayout>

</RelativeLayout>